[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://bw6f25j4g4uj" path="res://assets/backgrounds/blue-with-stars.png" id="2_bg"]
[ext_resource type="PackedScene" uid="uid://c4xk3qyw1h7xp" path="res://scenes/ui/options_menu.tscn" id="3_options"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")
options_packed_scene = ExtResource("3_options")

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 5

[node name="MenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleMargin" type="MarginContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 16

[node name="TitleBox" type="VBoxContainer" parent="MenuContainer/VBoxContainer/TitleMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="MenuContainer/VBoxContainer/TitleMargin/TitleBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "SHOOTER CARNIVAL"
horizontal_alignment = 1

[node name="SubTitleLabel" type="Label" parent="MenuContainer/VBoxContainer/TitleMargin/TitleBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "A Community Game"
horizontal_alignment = 1

[node name="MenuButtonsMargin" type="MarginContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 32

[node name="MenuButtonsBoxContainer" type="VBoxContainer" parent="MenuContainer/VBoxContainer/MenuButtonsMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1

[node name="NewGameButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
text = "Exit"

[node name="VersionLabel" type="Label" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "v0.1.0"
horizontal_alignment = 2

[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtonsMargin/MenuButtonsBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtonsMargin/MenuButtonsBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtonsMargin/MenuButtonsBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtonsMargin/MenuButtonsBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
